ICE-11397 added converter support to ace:checkboxButton, ace:radioButton and ace:radioButtons
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@52433 8668f098-c06c-11db-ba21-f49e70c34f74